fixed header on mobile

--- a/assets/css/vitality-red.css
+++ b/assets/css/vitality-red.css
@@ -1,8 +1,4 @@
-/*!
- * Vitality v1.1 (http://themes.startbootstrap.com/vitality-v1.1)
- * Copyright 2014 Start Bootstrap Themes.
- * Licensed at WrapBootstrap, visit WrapBootstrap to purchase a usage license for this theme (https://wrapbootstrap.com/)
- */
+
 
 html,
 body {
@@ -77,7 +73,16 @@ h6 {
     font-weight: 900;
 }
 
+hr {
+    max-width: 100px;
+    margin-right: 20px;
+    margin-top: 5px;
+}
+
+
 @media(min-width:481px) {
+
+    }
     h1 {
         font-size: 52px;
     }
@@ -240,14 +245,14 @@ header {
     width: auto;
     height: auto;
     padding: 100px 0;
-    min-height: 100%;
-    background: no-repeat center center;
+    min-height: 25%;
+    background: no-repeat center left;
     background-attachment: scroll;
-    background-color: gray;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+    background-color: #1BBB8E;
+    -webkit-background-size: 68%;
+    -moz-background-size: 68%;
+    background-size: 68%;
+    -o-background-size: 68%;
 }
 
 header .intro-content {
@@ -260,20 +265,25 @@ header .brand-name {
     margin-top: 15px;
     text-transform: uppercase;
     font-family: Raleway,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 55px;
-    font-weight: 900;
-    line-height: 55px;
+    font-size: 15px;
+    font-weight: 700;
+    line-height: 15px;
+    padding-right: 5%;
 }
 
 header .brand-name-subtext {
-    font-size: 20px;
+    font-size: 12px;
     font-weight: 300;
-    line-height: 20px;
-}
+    line-height: 0px;
+    margin-right: 8px;
+    margin-top: -6px;
+    }
 
 header img {
     max-height: 150px;
     max-width: 150px;
+    padding-left: 63%;
+    padding-top: 20px;
 }
 
 header .scroll-down {
@@ -305,11 +315,18 @@ header .scroll-down .btn:hover {
 }
 
 @media(min-width:768px) {
+    header .header-bg {
+        max-height: 200px;
+    }
     header {
         width: 100%;
         height: 100%;
         padding: 0;
         background-attachment: scroll;
+        -webkit-background-size: 80%;
+        -moz-background-size: 80%;
+        background-size: 80%;
+        -o-background-size: 80%;
     }
 
     header .intro-content {
@@ -338,7 +355,10 @@ header .scroll-down .btn:hover {
     header img {
         max-height: 300px;
         max-width: 300px;
+        padding-left: 0;
     }
+
+
 }
 
 @media(min-width:1025px) {
